3.0 Main code done! todo: - vanish system - optimize it as it can cause memory consumption over time