@@ -1,7 +1,11 @@
 package me.xapu1337.recodes.trollgui.Listeners;
 
-import me.xapu1337.recodes.trollgui.Cores.Core;
+import me.xapu1337.recodes.trollgui.Cores.TrollCore;
+import me.xapu1337.recodes.trollgui.Utilities.MessageCollector;
 import me.xapu1337.recodes.trollgui.Inventorys.TrollGUI;
+import me.xapu1337.recodes.trollgui.Utilities.Singleton;
+import me.xapu1337.recodes.trollgui.Utilities.Utilities;
+import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.EventPriority;
@@ -10,6 +14,7 @@ import org.bukkit.event.block.BlockBreakEvent;
 import org.bukkit.event.block.BlockPlaceEvent;
 import org.bukkit.event.inventory.InventoryCloseEvent;
 import org.bukkit.event.player.AsyncPlayerChatEvent;
+import org.bukkit.event.player.PlayerDropItemEvent;
 import org.bukkit.event.player.PlayerMoveEvent;
 import org.bukkit.event.player.PlayerQuitEvent;
 import org.jetbrains.annotations.NotNull;
@@ -19,56 +24,76 @@ import java.util.stream.Collectors;
 public class EventListener implements Listener {
 
     @EventHandler
-    public void OnMoveEvent(PlayerMoveEvent playerMoveEvent) {
-        Player player = playerMoveEvent.getPlayer();
-        if(Core.instance.singletons.frozenPlayers.containsKey(Core.instance.utils.uuidOrName(player, Core.instance.usingUUID)))
-            playerMoveEvent.setCancelled(true);
-    }
-
-    @EventHandler
-    public void OnBuildEvent(BlockPlaceEvent blockPlaceEvent) {
-        if(Core.instance.singletons.noBuildPlayers.containsKey(Core.instance.utils.uuidOrName(blockPlaceEvent.getPlayer(), Core.instance.usingUUID)))
-            blockPlaceEvent.setCancelled(true);
-    }
-
-    @EventHandler
-    public void OnBreakEvent(BlockBreakEvent blockBreakEvent) {
-        if(Core.instance.singletons.noBreakPlayers.containsKey(Core.instance.utils.uuidOrName(blockBreakEvent.getPlayer(), Core.instance.usingUUID)))
-            blockBreakEvent.setCancelled(true);
-    }
-
-    @EventHandler (priority = EventPriority.HIGHEST)
-    public void onChat(@NotNull AsyncPlayerChatEvent e){
-        Player p = e.getPlayer();
-        if (Core.instance.singletons.reverseMessagePlayers.containsKey(Core.instance.utils.uuidOrName(p, Core.instance.usingUUID))) {
-            e.setMessage(Core.instance.utils.reverseMessage(e.getMessage()));
+    public void onMoveEvent(PlayerMoveEvent event) {
+        Player player = event.getPlayer();
+        if(Singleton.getSingleInstance().frozenPlayers.containsKey(Utilities.getSingleInstance().uuidOrName(player, TrollCore.instance.usingUUID))) {
+            event.setCancelled(true);
         }
     }
 
     @EventHandler
-    public void onPlayerQuit(PlayerQuitEvent e) {
+    public void onBuildEvent(BlockPlaceEvent event) {
+        if(Singleton.getSingleInstance().noBuildPlayers.containsKey(Utilities.getSingleInstance().uuidOrName(event.getPlayer(), TrollCore.instance.usingUUID)))
+            event.setCancelled(true);
+    }
 
-        if (Core.instance.singletons.currentPlayersTrolling.size() > 0) {
+    @EventHandler
+    public void onBreakEvent(BlockBreakEvent event) {
+        if(Singleton.getSingleInstance().noBreakPlayers.containsKey(Utilities.getSingleInstance().uuidOrName(event.getPlayer(), TrollCore.instance.usingUUID)))
+            event.setCancelled(true);
+    }
+
+    @EventHandler (priority = EventPriority.HIGHEST)
+    public void onChat(@NotNull AsyncPlayerChatEvent event){
+        Player p = event.getPlayer();
+        if(MessageCollector.getSingleInstance().getHandlers().containsKey(p)) {
+            MessageCollector.getSingleInstance().getHandlers().get(p).accept(p, event.getMessage());
+            MessageCollector.getSingleInstance().getHandlers().remove(p);
+            event.setCancelled(true);
+        }
+        if (Singleton.getSingleInstance().reverseMessagePlayers.containsKey(Utilities.getSingleInstance().uuidOrName(p, TrollCore.instance.usingUUID))) {
+            event.setMessage(Utilities.getSingleInstance().reverseMessage(event.getMessage()));
+        }
+    }
+
+    @EventHandler
+    public void onPlayerQuit(PlayerQuitEvent event) {
+
+        if (Singleton.getSingleInstance().currentPlayersTrolling.size() > 0) {
             // Find the current TrollGUI with the player that left as a victim.
-            TrollGUI currentTrollGUI = Core.instance.singletons.currentPlayersTrolling.values().stream()
-                    .filter(trollGUI -> trollGUI.getVictim().getUniqueId().equals(e.getPlayer().getUniqueId()))
+            TrollGUI currentTrollGUI = Singleton.getSingleInstance().currentPlayersTrolling.values().stream()
+                    .filter(trollGUI -> trollGUI.getVictim().getUniqueId().equals(event.getPlayer().getUniqueId()))
                     .findFirst()
                     .orElse(null);
 
             if (currentTrollGUI == null) return;
 
             currentTrollGUI.getCaller().closeInventory();
-            currentTrollGUI.getCaller().sendMessage(Core.instance.utils.getConfigPath("Messages.playerNotAvailable", true).replaceAll("%PLAYER%", e.getPlayer().getName()));
+            currentTrollGUI.getCaller().sendMessage(Utilities.getSingleInstance().getConfigPath("Messages.playerNotAvailable", true).replaceAll("%PLAYER%", event.getPlayer().getName()));
         }
 
     }
 
     @EventHandler
-    public void onInventoryClose(InventoryCloseEvent e) {
-        if (Core.instance.singletons.currentPlayersTrolling.values().stream().map(TrollGUI::getInventory).collect(Collectors.toList()).contains(e.getInventory())) {
-            Core.instance.singletons.currentPlayersTrolling.remove(Core.instance.singletons.currentPlayersTrolling.values().stream().filter(trollGUI -> trollGUI.getInventory() == e.getInventory()).collect(Collectors.toList()).stream().findFirst().get());
+    public void onInventoryClose(InventoryCloseEvent event) {
+        if (Singleton.getSingleInstance().currentPlayersTrolling.values().stream().map(TrollGUI::getInventory).toList().contains(event.getInventory())) {
+            // Find the current TrollGUI with the player that left as a victim.
+            TrollGUI currentTrollGUI = Singleton.getSingleInstance().currentPlayersTrolling.values().stream()
+                    .filter(trollGUI -> trollGUI.getInventory().equals(event.getInventory()))
+                    .findFirst()
+                    .orElse(null);
+            Singleton.getSingleInstance().currentPlayersTrolling.remove(event);
         }
     }
+
+    @EventHandler
+    public void onItemDrop(PlayerDropItemEvent event) {
+        if (Singleton.getSingleInstance().noDropPlayers.containsKey(Utilities.getSingleInstance().uuidOrName(event.getPlayer(), TrollCore.instance.usingUUID))) {
+            event.setCancelled(true);
+        }
+    }
+
+
 
 
 }
